testsuite/tests/typecheck/should_fail/T12042a.hs
module T12042a (module T12042a, module T12042) where
import {-# SOURCE #-} T12042
type U = S
